--- a/iMage/jmjrst.main/src/main/resources/org/jis/messages_en.properties
+++ b/iMage/jmjrst.main/src/main/resources/org/jis/messages_en.properties
@@ -114,3 +114,4 @@ OptionsEdit.20=Copy EXIF Metadata
 Messages.0=<html><head></head><body>A new version is at <a href=\"http://jmjrst.sourceforge.net\">http://jmjrst.sourceforge.net</a> available.</body></html>
 Messages.1=No new version is available.
 Messages.2=Error while reciving informations from server.
+Menu.17=Load Plug-ins
